<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://www.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>capstone</name>
  <version>1.0.0</version>
  <description>
    URDF description package for the Laproscope robot.
    Contains configuration files, 3D models, and launch files.
  </description>
  <maintainer email="dhruwik@example.com">Dhruwik</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <!-- Run dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/"/>
    <gazebo_ros gazebo_media_path="${prefix}/meshes"/>
  </export>
</package>